MOBILE-4595 a11y: Fix contrast of loading spinner

--- a/src/theme/theme.light.scss
+++ b/src/theme/theme.light.scss
@@ -138,7 +138,7 @@
     --core-tab-color-active: var(--dark);
     --core-tab-border-color-active: var(--primary);
 
-    --core-loading-spinner: var(--primary);
+    --core-loading-spinner: var(--dark);
 
     --core-progressbar-color: var(--primary);
     --core-progressbar-text-color: var(--medium);
